<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_login"
    tools:context=".LoginActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="96dp"
        android:src="@drawable/frame"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20px"
        />
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:gravity="center"
        android:textSize="36dp"
        android:textColor="@color/title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/let_email"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:paddingTop="12dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/selector_login_edittext"
            android:hint="@string/email"
            android:textColor="@color/black"
         />

        <EditText
            android:id="@+id/let_password"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:padding="10dp"
            android:paddingTop="12dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/selector_login_edittext"
            android:hint="@string/password"
            android:textColor="@color/black"
            />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:padding="5dp"
            android:shadowDy="45"
            android:shadowColor="#000"
            android:layout_marginBottom="10dp"
            android:background="@drawable/selector_login_button"
            android:text="@string/login"
            android:textColor="@color/white"
            />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/login_text"
                android:textSize="18sp"
                android:text="@string/signup"
                android:layout_alignParentBottom="true"
             />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
