<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_login"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/ret_email"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:paddingTop="12dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/selector_login_edittext"
            android:hint="@string/email"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/ret_username"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:inputType="text"
            android:padding="10dp"
            android:paddingTop="12dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/selector_login_edittext"
            android:hint="@string/username"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/ret_password"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:padding="10dp"
            android:paddingTop="12dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/selector_login_edittext"
            android:hint="@string/password"
            android:textColor="@color/black"
            />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:padding="5dp"
            android:shadowDy="45"
            android:shadowColor="#000"
            android:layout_marginBottom="10dp"
            android:background="@drawable/selector_login_button"
            android:text="@string/signup"
            android:textColor="@color/white"
            />

    </LinearLayout>

</LinearLayout>
